# Malgolab

./: .gitignore  3.md  LICENSE  README.md  pyproject.toml  test_judge.py  test_multi.py  test_python.py  test_record.py
cpp/: CmakeLists.txt
cpp/apps/: segment_cli_tree.cpp
cpp/generators/: gen_array.cpp  gen_graph.cpp  gen_interval.cpp  gen_tree.cpp
cpp/include/: segment_tree.hpp
python/: environment.yaml
python/Malgolab/cli/: main.py
python/Malgolab/cli/commands/: __init__.py  check.py  contest.py  edit.py  fetch.py  init.py  judge.py  judge_id.py
python/Malgolab/cpp_wrapper/: segment_tree.py
python/Malgolab/judge/: checker.py  crawler.py  local_judge.py  models.py  solution.py
scripts/: build_cpp.ps1  clean.py  init_solution.py
templates/: default.cpp
